# mini-dashboard

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyrightconfig.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/config/: settings.py
backend/dashboard/: admin.py  models.py  serializers.py  urls.py  views.py
backend/dashboard/migrations/: 0001_initial.py
frontend/: .env.production  index.html  package-lock.json
frontend/src/: App.css  App.jsx  Notification.css  Notification.jsx  TargetProgressChart.jsx  api.js  index.css
