[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.0",
    "djangorestframework-stubs>=3.16.0",
]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.basedpyright]
djangoSettingsModule = "config.settings"
plugins = ["mypy_django_plugin.main"]
